--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".WelcomeActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SignUpActivity"
             android:label="Auth"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
