--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
